--- a/rating-service.yml
+++ b/rating-service.yml
@@ -1,18 +1,17 @@
 server:
  port: 8084
- 
+
+eureka:
+ client:
+  register-with-eureka: true
+  fetch-registry: true
+  serviceUrl:
+   defaultZone: http://localhost:8761/eureka/
+ instance:
+  hostname: localhost
+  
 spring:
  data:
   mongodb:
    uri: mongodb+srv://orange:orange123@cluster0-xero4.mongodb.net/test?retryWrites=true
    database: MyDB
-   
-eureka:
- client:
-  register-with-eureka=true
-  fetch-registry=true
-  serviceUrl:
-   defaultZone: http://localhost:8761/eureka/
- instance:
-  hostname: localhost
- 
