--- a/book-service.yml
+++ b/book-service.yml
@@ -9,4 +9,9 @@ eureka:
    defaultZone: http://localhost:8761/eureka/
  instance:
   hostname: localhost
+spring:
+ data:
+  mongodb:
+   uri: mongodb+srv://orange:orange123@cluster0-xero4.mongodb.net/test?retryWrites=true
+   database: MyDB
  
