--- a/bookapp-gateway.properties
+++ b/bookapp-gateway.properties
@@ -6,3 +6,9 @@ eureka:
    defaultZone: http://localhost:8761/eureka/
  instance:
   hostname: localhost
+zuul:
+ routes:
+  book-service:
+   path=/book-service/**
+  rating-service:
+    path=/rating-service/**
