changes are made

--- a/bookapp-gateway.properties
+++ b/bookapp-gateway.properties
@@ -9,6 +9,8 @@ eureka:
 zuul:
  routes:
   book-service:
-   path=/book-service/**
+   path: /book-service/**
+   serviceId: BOOK-SERVICE
   rating-service:
-    path=/rating-service/**
+    path: rating-service/**
+    serviceId: RATING-SERVICE
